--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>top.jdev</groupId>
@@ -82,7 +81,7 @@
 		    <version>${log4j2.version}</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/commons-collections/commons-collections -->
+		
 		<dependency>
 		    <groupId>commons-collections</groupId>
 		    <artifactId>commons-collections</artifactId>
@@ -91,7 +90,7 @@
 	  	<dependency>
 		      <groupId>commons-fileupload</groupId>
 		      <artifactId>commons-fileupload</artifactId>
-		      <version>1.2.1</version>
+		      <version>1.3.3</version>
 	        </dependency>
    </dependencies>
 </project>
