--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 	  <dependency>
 	    <groupId>org.apache.struts</groupId>
 	    <artifactId>struts2-core</artifactId>
-	    <version>${struts2.version}</version>
+	    <version>2.5.25</version>
 	   </dependency>
 	   
 	   <dependency>
