--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-api</artifactId>
-		    <version>${log4j2.version}</version>
+		    <version>2.16.0</version>
 		</dependency>
 		
 		
